<resources>

    <!-- string ids for registration.xml -->
    <string name="username_textview">Username:</string>
    <string name="password_textview">Password:</string>
    <string name="submit">Submit</string>

    <!-- string ids for home.xml -->
    <string name="post_comment">Post Comment</string>
    <string name="read_comments_title">Recent Comments</string>
    <string name="passwords_not_same">Passwords don\'t match</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">Guess the Number Game</string>
    <string name="login_activity">Login</string>
    <string name="register_activity">SignUp</string>
    <string name="welcome_activity">Welcome</string>
    <string name="startgame_activity">Start Game</string>
    <string name="playgame_activity">Play Game</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered!Login here</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="range1">0-50 (Easy)</string>
    <string name="range2">0-100 (Medium)</string>
    <string name="range3">0-300 (Difficult)</string>
    <string name="range4">0-500 (Expert)</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="guess_desc">You have to guess a number between </string>
    <string name="guess_desc_remember">Remember, if you will guess in minimum number of tries then you will get maximum points.</string>
    <string name="start_game">Start Game</string>
    <string name="hi">Hi</string>
    <string name="enter_choice">Enter your guess</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    <string name="playgame_msg">Lets make your first Guess.</string>
    <string name="playgame_actualNumber">Number to be Guessed:</string>
    <string name="playgame_no_of_guesses">Number of Guess made:</string>
    <string name="playgame_score">Your Score:</string>
    <string name="summary">Summary</string>
    <string name="start_again">Play Again.!</string>
    <string name="signup">SignUp</string>

    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="activity_about_us_msg">GUESS THE NUMBER GAME</string>
    <string name="activity_about_us_app_version">Version 1.0.0</string>
    <string name="activity_about_us_description">Simple fun game for guessing the number.Try your luck to find the correct number.</string>
    <string name="activity_about_us_developed_by">Developed By:</string>
    <string name="activity_about_us_owner">Swapnil D. Renge</string>
    <string name="activity_about_us_owner_info">Summer Intern at Flaming Blade IT Solution LLP Pune.(2015-2016)</string>
    <string name="activity_about_us_rights">All rights reserved.</string>
    <string name="activity_about_us_queries">if you have any queries or suggestions, please write us at
    </string>
    <string name="activity_about_us_queries_email">swapnil.flamingblade@gmail.com</string>



</resources>


