<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical"

    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">



    <TextView
        android:id="@+id/activity_about_us_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_margin="5dp"
        android:text="@string/activity_about_us_msg"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/activity_about_us_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:text="@string/activity_about_us_app_version"
        android:textStyle="italic"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="#CFD8DC"
        />

    <TextView
        android:id="@+id/activity_about_us_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:text="@string/activity_about_us_description"
        android:textStyle="normal"
        android:padding="5dp"
        android:textColor="@color/white"

        android:gravity="center"
        />
    <TextView
        android:id="@+id/activity_about_us_developed_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:text="@string/activity_about_us_developed_by"
        android:textStyle="italic"
        android:padding="5dp"
        android:textColor="#B6B6B6"

        android:gravity="center"
        />

    <TextView
        android:id="@+id/activity_about_us_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:text="@string/activity_about_us_owner"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/activity_about_us_owner_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_margin="5dp"
        android:text="@string/activity_about_us_owner_info"
        android:textStyle="normal"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/white"

        />
    <TextView
        android:id="@+id/activity_about_us_rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:text="@string/activity_about_us_rights"
        android:textStyle="normal"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/white"

        />
    </LinearLayout>
</ScrollView>

</LinearLayout>
