<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mysqltest.StartGameActivity">

    <TextView
        android:id="@+id/guess_desc_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_margin="5dp"
        android:text="@string/guess_desc"
        android:padding="5dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/guess_desc_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:text="@string/guess_desc_remember"
        android:textStyle="italic"
        android:padding="5dp"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

    <Button
        android:id="@+id/start_Game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="25dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:background="#607D8B"
        />
</LinearLayout>
</LinearLayout>
