<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     tools:context="com.example.mysqltest.WelcomeActivity">
<TextView
    android:id="@+id/welcome_msg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="25dp"
    android:layout_margin="5dp"
    android:textStyle="bold"
    android:gravity="center"

    />
    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="Welcome to Guess The Number"
        android:gravity="center"
        android:layout_margin="5dp"

        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select the Range of Numbers"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="5dp"
        />
    <Button
        android:id="@+id/range1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/range1"
        android:textSize="25dp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:background="#607D8B"
        />
        <Button
            android:id="@+id/range2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/range2"
            android:textSize="25dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="20dip"
            android:background="#607D8B"
            />
        <Button
            android:id="@+id/range3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/range3"
            android:textSize="25dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="20dip"
            android:background="#607D8B"
            />
        <Button
            android:id="@+id/range4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/range4"
            android:textSize="25dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="20dip"
            android:background="#607D8B"
            />
</LinearLayout>
</ScrollView>
</LinearLayout>
